syntax = "proto3";

option csharp_namespace = "asagiv.datapush.common";

package dataPush;

service DataPush {
  rpc RegisterNode (RegisterNodeRequest) returns (RegisterNodeResponse);
  rpc PushData (stream DataPushRequest) returns (stream DataPushResponse);
  rpc PullData (DataPullRequest) returns (stream DataPullResponse);
}

message RegisterNodeRequest
{
  string requestId = 1;
  string nodeName = 2;
  string deviceId = 3;
  bool isPullNode = 4;
}

message RegisterNodeResponse
{
  string requestId = 1;
  string nodeName = 2;
  bool successful = 3;
  repeated string pullNodeList = 4;
}

message DataPushRequest {
  string requestId = 1;
  string sourceNode = 2;
  string destinationNode = 3;
  string name = 4;
  int32 blockNumber = 5;
  int32 totalBlocks = 6;
  bytes payload = 7;
}

message DataPushResponse {
  string requestId = 1;
  string destinationNode = 2;
  int32 confirmation = 3;
  int32 blockNumbner = 4;
  string errorMessage = 5;
}

message DataPullRequest {
  string requestId = 1;
  string destinationNode = 2;
}

message DataPullResponse {
  string requestId = 1;
  string sourceRequestId = 2;
  string sourceNode = 3;
  string destinationNode = 4;
  string name = 5;
  int32 blockNumber = 6;
  int32 totalBlocks = 7;
  bytes payload = 8;
}